--- a/tm-stylesheet.css
+++ b/tm-stylesheet.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=UnifrakturCook&display=swap');
-
 .wrapper {
         display: grid;
         grid-gap: 1vw;
@@ -223,7 +221,7 @@ input[type=submit] {
 
 
 .plnt {
-  font-family: 'UnifrakturCook', cursive;
+  font-family: 'Libre Barcode 39 Extended Text', cursive;
   margin-right: 2vw;
   margin-left: auto;
   margin-top: auto;
